fix alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap');
+
 * {
     box-sizing: border-box;
     /* border: solid red; */
@@ -15,6 +17,7 @@ body {
 
 .logo {
     font-weight: 500;
+    margin-right: 40px;
 }
 
 button:hover {
@@ -28,6 +31,8 @@ button:hover {
     width: 100%;
     color: white;
     padding: 11px 100px;
+    white-space: nowrap;
+    align-items: center;
 }
 
 
@@ -37,7 +42,8 @@ button:hover {
     padding: 0;
     margin: 0;
     margin-left: auto;
-    gap: 16px
+    gap: 16px;
+    
 }
 
 .hero {
